# OS-ex3

./: Barrier.cpp  Barrier.h  CMakeLists.txt  CMakeLists0.txt  CMakeLists2.txt  JobContext.cpp  JobContext.h  MapReduceFramework.cpp  MapReduceFramework.h
Atomic/: atomicdemo  atomicdemo_multivar
Barrier/: Barrier.cpp  Barrier.h  barrierdemo
Sample Client/: Makefile  SampleClient.cpp
mattanTests/: SampleClient.cpp
